--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </svg>
         </div>
         <div class="mainContent">
-            <div class="menu">Test1</div>
+            <div class="meny" id="meny"></div>
             <div id="map"></div>
         </div>
 
