--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
         <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
 
         <!-- Min js -->
+         <script src="js/generell.js"></script>
         <script src="js/lastData.js"></script>
         <script src="js/map.js"></script>
+        <script src="js/meny.js"></script>
 
     </body>
 </html>
