Starte med kart-meny

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
         <!-- Min js -->
         <script src="js/generell.js"></script>
+        <script src="js/kartKnapper.js"></script>
         <script src="js/lastData.js"></script>
         <script src="js/map.js"></script>
         <script src="js/meny.js"></script>
