Legg til heatmap og layer control

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
         <script src="js/sidemeny.js"></script>
         <script src="js/kartKnapper.js"></script>
         <script src="js/lastData.js"></script>
+        <script src="js/heatmap.js"></script>
+        <script src="js/leaflet-heat.js"></script>
 
     </body>
 </html>
