Fortsette tog-intro-oppsett

--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
     <body>
         <!-- Intro -->
          <div id="intro">
-            <img src="icons/train_intro.svg" alt="Tog" id="train">
+            <div class="background"></div>
+            
+            <img src="icons/train_intro1.svg" alt="Tog" id="train train-right">
+            <img src="icons/train_intro2.svg" alt="Tog" id="train train-diagonal">
+            <img src="icons/train_intro3.svg" alt="Tog" id="train train-left">
+
+            <div id="flags"></div>
          </div>
         
         <!-- Resten av siden -->
