--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
          <div id="intro">
             <div class="background"></div>
             
-            <img src="icons/train_intro1.svg" alt="Tog" id="train train-right">
-            <img src="icons/train_intro2.svg" alt="Tog" id="train train-diagonal">
-            <img src="icons/train_intro3.svg" alt="Tog" id="train train-left">
+            <img src="icons/train_intro1.svg" alt="Tog" class="train train-right">
+            <img src="icons/train_intro2.svg" alt="Tog" class="train train-diagonal">
+            <img src="icons/train_intro3.svg" alt="Tog" class="train train-left">
 
             <div id="flags"></div>
          </div>
