--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <!-- Leaflet js -->
         <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
-        <script src="js/plugings/L.Polyline.SnakeAnim.js"></script>
+        <script src="js/plugins/L.Polyline.SnakeAnim.js"></script>
         <!-- Clustering -->
         <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
         <!-- Turf -->
