Mye layout fix og begynne filtrering

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <script src="js/sidemeny.js"></script>
         <script src="js/kartKnapper.js"></script>
         <script src="js/lastData.js"></script>
+        <script src="js/filtrering.js"></script>
 
     </body>
 </html>
